# tenant-system

./: .dockerignore  .env  1.json  1.sh  Cargo.toml  README.md  docker-compose.yaml  docker-stack.yml  makefile  package-lock.json  package.json
config/: rbac_with_domains_model.conf  rbac_with_domains_policy.csv
docs/: login.excalidraw  todo.md
domus/: Cargo.toml  Dockerfile  README.md
examples/: json.rs
filestore/: Cargo.toml  Dockerfile
filestore/src/: main.rs
filestore/src/api/: mod.rs  upload.rs
filestore/src/service/: mod.rs  upload_house_images.rs
filestore/src/test/: upload.http
k8s/: user-system-deployment.yaml
migrations/: 20250529062222_create_user_aggregate.down.sql  20250529062222_create_user_aggregate.up.sql  20250530024310_create_read_model.down.sql  (+8 more)
minio_client/: Cargo.toml
user-system/: .env  Cargo.toml  README.md
user-system/src/: main.rs
user-system/src/application/: mod.rs
user-system/src/application/commands/: create_role.rs  delete_role.rs  delete_user.rs  login.rs  mod.rs  permission_granted_to_role.rs  register_user.rs  update_role.rs  update_user.rs  user_binded_to_roles.rs
user-system/src/application/listeners/: login.rs  mod.rs  user.rs  user_event.rs
user-system/src/application/queries/: mod.rs  role_query_service.rs  user_query_service.rs
user-system/src/application/repositories/: mod.rs  role.rs  user.rs  user_query_repository.rs
user-system/src/application/services/: claims.rs  create_role.rs  delete_role.rs  login.rs  mod.rs  register_user.rs  update_role.rs  update_user.rs
user-system/src/domain/: mod.rs
user-system/src/domain/password/: argon.rs  mod.rs
user-system/src/domain/roles/aggregates/: role.rs
user-system/src/domain/roles/events/: mod.rs  permission_granted_to_role.rs  role.rs  role_created.rs  role_deleted.rs  role_updated.rs
user-system/src/domain/user/aggregates/: user.rs
user-system/src/domain/user/events/: login.rs  mod.rs  user.rs  user_binded_to_roles.rs  user_deleted.rs  user_registered.rs  user_updated.rs
user-system/src/domain/user/value_objects/: account_status.rs  email.rs  mod.rs
user-system/src/infrastructure/: mod.rs  mysql_pool.rs
user-system/src/infrastructure/casbin/: init_casbin.rs  mod.rs
user-system/src/infrastructure/dtos/: mod.rs  user_query_dto.rs
user-system/src/infrastructure/entitiy/: casbin_rules.rs  community_aggregate.rs  mod.rs  permission.rs  permission_role.rs  prelude.rs  role_aggregate.rs  role_user.rs  sea_orm_active_enums.rs  user_aggregate.rs  user_details_read.rs  user_login_history.rs  user_operation_log.rs
user-system/src/infrastructure/role/: mysql_role_query_repository.rs  role_aggregate_repository.rs
user-system/src/infrastructure/user/: mod.rs  mysq_user_query_repository.rs  role_aggregate_repository.rs  user_aggregate_repository.rs
user-system/src/interfaces/controllers/: role.rs  user.rs  user_query.rs
user-system/src/tests/interfaces/: create_role.http  create_user.http  delete_role.http  delete_user.http  login.http  query_role.http  query_user.http  register_user.http  update_role_permissions.http  update_user.http  user_binded_to_roles.http
user_system/: Cargo.toml  Dockerfile  README.md
user_system/src/: init_system.rs  main.rs  start_http_server.rs
user_system/src/application/commands/: create_role.rs  delete_user.rs  init_system.rs  login.rs  mod.rs  permission_granted_to_role.rs  register_user.rs  update_role.rs  update_user.rs  user_binded_to_roles.rs
user_system/src/application/listeners/: role.rs  user.rs
user_system/src/application/queries/: role_query_service.rs  user_query_service.rs
user_system/src/application/repositories/: mod.rs  role.rs  role_query_repository.rs  user_aggreate_repository.rs  user_query_repository.rs
user_system/src/application/services/: casbin.rs  create_role.rs  delete_user.rs  login.rs  mod.rs  permissions_detail.rs  register_user.rs  update_role.rs
user_system/src/domain/: mod.rs
user_system/src/domain/roles/: mod.rs
user_system/src/domain/roles/aggregates/: role.rs
user_system/src/domain/roles/events/: mod.rs  permission_granted_to_role.rs
user_system/src/domain/security/: argon.rs
user_system/src/domain/user/: mod.rs
user_system/src/domain/user/aggregates/: user.rs
user_system/src/domain/user/events/: mod.rs  user.rs  user_binded_to_roles.rs  user_deleted.rs  user_registered.rs  user_updated.rs
user_system/src/domain/user/value_objects/: email.rs
user_system/src/infrastructure/: mod.rs  mysql_pool.rs
user_system/src/infrastructure/casbin/: init_casbin.rs  sea_orm_adapter.rs
user_system/src/infrastructure/dtos/: role_query_dto.rs  user_login_history_dto.rs  user_query_dto.rs
user_system/src/infrastructure/entitiy/: casbin_rules.rs  event_record.rs  mod.rs  owner.rs  permission.rs  permission_role.rs  permissions_detail.rs  prelude.rs  role_detail_read_model.rs  user_login_history.rs  user_query.rs
user_system/src/infrastructure/role/: mod.rs  mysql_role_query_repository.rs  role_aggregate_repository.rs
user_system/src/infrastructure/user/: mod.rs  mysq_user_query_repository.rs  user_aggregate_repository.rs
user_system/src/interfaces/controllers/: mod.rs  role.rs  user.rs  user_query.rs
user_system/src/interfaces/dtos/: response.rs
user_system/src/shared/: auth_middleware.rs  claims.rs  mod.rs
user_system/src/shared/casbin/: init_casbin.rs  sea_orm_adapter.rs
user_system/src/shared/infrastructure/: mod.rs  mysql.rs
user_system/src/shared/infrastructure/casbin/: init_casbin.rs  sea_orm_adapter.rs
user_system/src/shared/infrastructure/entitiy/: mod.rs  prelude.rs
user_system/src/tests/interfaces/: create_role.http  create_user.http  login.http  query_role.http  update_user.http  user_binded_to_roles.http
user_system/tests/interfaces/: create_role.http  create_user.http  delete_role.http  delete_user.http  login.http  permissions_details.http  permissions_details_list.http  query_login_histroy.http  query_role.http  query_user.http  role.http  update_role.http  update_role_permissions.http  update_user.http  user_binded_to_roles.http
(+194 files in other folders)
