[package]
name = "tenant-system"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/event_bus", "crates/log", "crates/shared_dto", "crates/shared_utils", "domus", "filestore",
    "user_system",
]

[dependencies]
base64ct="<1.8.0"
casbin = { workspace = true }
chrono= { workspace = true }
uuid = { workspace = true }
event_bus = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait= { workspace = true }
sea-orm = { workspace = true }
futures = { workspace = true }
dotenvy  = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
argon2  = { workspace = true }
serde  = { workspace = true }
jsonwebtoken  = { workspace = true }
time = { workspace = true }
actix-web  = { workspace = true }
serde_json = { workspace = true }
shared_dto = { workspace = true }
http = { workspace = true }
shared_utils = { workspace = true }
user_system = { workspace = true }
actix-casbin = { workspace = true }
actix-rt = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
validator = { workspace = true }
serde_with = { workspace = true }
openssl-sys = { workspace = true }

[workspace.dependencies]
serde_with = "3.14.0"
actix-casbin = "1.1.0"
actix-rt = "2.10.0"
openssl-sys = { version = "0.9.90", features = ["vendored"] }
casbin = { version = "2.8.0", default-features = false, features = ["runtime-async-std", "logging", "incremental"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45.1", features = ["full"] }
actix-web = "4"
uuid = { version = "1.17.0", features = ["v4"] }
async-trait = { version = "0.1" }
event_bus = { path = "crates/event_bus" }
anyhow = "1.0.68"
sea-orm = { version = "1.1.12", features = [
    "debug-print",
    "runtime-async-std-native-tls",
    "sqlx-mysql",
]}
dotenvy = "0.15.7"
futures = "0.3"
log = { path = "crates/log" }
shared_dto ={ path = "crates/shared_dto" }
shared_utils = { path = "crates/shared_utils" }
user_system = { path = "user_system" }
tracing = "0.1"
argon2 = "0.5.3"
time = "0.3.21"
jsonwebtoken = "9.3.1"
http = "1.3.1"
aws-config = "1.8.5"
aws-sdk-s3 = "1.103.0"
clap = { version = "4.2.7", features = ["derive"] }
reqwest = { version = "0.12.20", features = ["json"] }
validator = { version = "0.19", features = ["derive"] }

[[bin]]
name = "user_system"
path = "user_system/src/main.rs"

[[bin]]
name = "domus"
path = "domus/src/main.rs"
