[package]
name = "filestore"
version = "0.1.0"
edition = "2024"

[dependencies]
minio = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
actix-web  = { workspace = true }
serde_json = { workspace = true }
serde = {workspace = true}
actix-multipart = { workspace = true }
user_system = { workspace = true }
log = { workspace = true }
dotenvy = { workspace = true }