[package]
name = "user_system"
version = "0.1.0"
edition = "2021"

[dependencies]
casbin = { workspace = true }
chrono= { workspace = true }
uuid = { workspace = true }
event_bus = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait= { workspace = true }
sea-orm = { workspace = true }
futures = { workspace = true }
dotenvy  = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
argon2  = { workspace = true }
serde  = { workspace = true }
jsonwebtoken  = { workspace = true }
time = { workspace = true }
actix-web  = { workspace = true }
serde_json = { workspace = true }
shared_dto = { workspace = true }
clap = {  workspace = true }
openssl-sys = { workspace = true }